Finished project. Added reset(only) button, fixed certain sizes overflowing.

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ h2 {
 
 #grid-container {
     display: flex;
-    height: 500px;
-    width: 500px;
+    height: 500.5px;
+    width: 500.5px;
     flex-wrap: wrap;
     justify-content: space-between;
     border: solid 5px #ff2b2b;
@@ -32,18 +32,27 @@ h2 {
     margin: 0px;
 }
 
-.reset-btn {
-    border: solid 5px #ff2b2b;
+.reset-resize-btn {
+    border: solid 3px #ff2b2b;
     border-radius: 5px;
     color: #000000;
     background-color: white;
-    padding: 16px 128px;
-    font-size: larger;
+    padding: 3px 30px;
+    font-size: medium;
     font-weight: bolder;
-    margin: 16px;
+    margin: 5px;
 }
 
-.reset-btn:hover {
+.reset-resize-btn:hover, .reset-btn:hover {
     background-color: black;
     color: white;
 }
+
+.reset-btn {
+    border: solid 3px #ff2b2b;
+    border-radius: 5px;
+    color: #000000;
+    background-color: white;
+    padding: 3px 64px;
+    font-size: medium;
+    font-weight: bold;
